[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/GUI/GUIControl.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI/GUI/CommandTextBox.gd" type="Script" id=2]
[ext_resource path="res://Scripts/UI/GUI/Control.gd" type="Script" id=3]

[node name="GUI" type="Camera2D"]
z_index = 4096
z_as_relative = false
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_speed = 30.0
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = -255.24
margin_top = -150.028
margin_right = 768.76
margin_bottom = 449.972
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandTextBox" type="LineEdit" parent="Control"]
anchor_left = 0.019
anchor_top = 0.896
anchor_right = 0.607
anchor_bottom = 0.948
margin_left = -0.107033
margin_top = 0.0131226
margin_right = -0.218933
margin_bottom = -0.18689
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextOutputBox" type="RichTextLabel" parent="Control"]
anchor_left = 0.026
anchor_top = 0.095
anchor_right = 0.595
anchor_bottom = 0.88
margin_left = 0.375999
margin_top = -3.8147e-06
margin_right = -0.280029
margin_bottom = -6.10352e-05
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="CommandCreated" from="Control/CommandTextBox" to="." method="_on_CommandTextBox_CommandCreated"]
[connection signal="text_entered" from="Control/CommandTextBox" to="Control/CommandTextBox" method="_on_CommandTextBox_text_entered"]
